# note-agent

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  README.md  package.json  playwright.config.ts  pyproject.toml
.claude/rules/: note-adapter.md  python.md  security.md  testing.md
prompts/: style_general.txt  style_quantamental.txt
scripts/: debug_editor_page.py  debug_login_page.py  test_autologin.py
src/: agent.py  article_generator.py  cli.py  config.py  models.py  note_client.py
tests/: test_article_generator.py  test_models.py  test_wiring.py
